Make sure header has spacing for title

--- a/public/style.css
+++ b/public/style.css
@@ -128,7 +128,7 @@ html:not(:has(link#k[href*=sites6], link#k[href*=template5])) .article_index img
 }
 
 .master-content-wrapper {
-  grid-column: full-width;
+  grid-template-rows: auto;
   grid-row: 1/3;
 }
 
